--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,8 +12,8 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Install dependencies
-        run: apt install -y curl jq
+      #- name: Install dependencies
+      #  run: apt install -y curl jq
 
       - name: Get JSON
         run: curl -s https://sistemas.trf1.jus.br/pgp-api/api/local/JFDF/processo/1023891-47.2023.4.01.3400\?ordem\=1\&max\=10\&offset\=0 | jq > json/$GITHUB_RUN_ID.json
