--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
           P='1023891-47.2023.4.01.3400'
           T='ordem=1&max=10&offset=0'
           F='SF1'
-          curl -s "https://$H/$P?$T" | jq > "json/$F/$GITHUB_RUN_ID.json"
+          curl -s "https://$H/$P?$T" > "json/$F/$GITHUB_RUN_ID.json"
 
       - name: Commit SF1
         uses: EndBug/add-and-commit@v9
@@ -34,7 +34,7 @@ jobs:
           P='1026558-69.2024.4.01.3400'
           T='ordem=1&max=10&offset=0'
           F='CD1'
-          curl -s "https://$H/$P?$T" | jq > "json/$F/$GITHUB_RUN_ID.json"
+          curl -s "https://$H/$P?$T" > "json/$F/$GITHUB_RUN_ID.json"
 
       - name: Commit CD1
         uses: EndBug/add-and-commit@v9
