--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,24 @@ jobs:
           P='1023891-47.2023.4.01.3400'
           T='ordem=1&max=10&offset=0'
           F='SF1'
-          curl -s "https://$H/$P?$T" > "json/$F/$GITHUB_RUN_ID.json"
+          curl -s "https://$H/$P?$T" \
+          -H 'Accept: text/html,application/xhtml+xml,application/xml;q=0.9,image/avif,image/webp,image/apng,*/*;q=0.8' \
+          -H 'Accept-Language: en;q=0.9' \
+          -H 'Cache-Control: no-cache' \
+          -H 'Connection: keep-alive' \
+          -H 'Cookie: SISTEMAS-47873-SG_PGP_API_8080_TCP=FFABBAKMJABP; SISTEMAS-47873-SG_ORDEMCRONOLOGICA_8080_TCP=EGACBAKMJABP' \
+          -H 'DNT: 1' \
+          -H 'Pragma: no-cache' \
+          -H 'Sec-Fetch-Dest: document' \
+          -H 'Sec-Fetch-Mode: navigate' \
+          -H 'Sec-Fetch-Site: none' \
+          -H 'Sec-Fetch-User: ?1' \
+          -H 'Sec-GPC: 1' \
+          -H 'Upgrade-Insecure-Requests: 1' \
+          -H 'User-Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/128.0.0.0 Safari/537.36' \
+          -H 'sec-ch-ua: "Chromium";v="128", "Not;A=Brand";v="24", "Brave";v="128"' \
+          -H 'sec-ch-ua-mobile: ?0' \
+          -H 'sec-ch-ua-platform: "macOS"' | jq > "json/$F/$GITHUB_RUN_ID.json"
 
       - name: Commit SF1
         uses: EndBug/add-and-commit@v9
@@ -34,7 +51,24 @@ jobs:
           P='1026558-69.2024.4.01.3400'
           T='ordem=1&max=10&offset=0'
           F='CD1'
-          curl -s "https://$H/$P?$T" > "json/$F/$GITHUB_RUN_ID.json"
+          curl -s "https://$H/$P?$T" \
+          -H 'Accept: text/html,application/xhtml+xml,application/xml;q=0.9,image/avif,image/webp,image/apng,*/*;q=0.8' \
+          -H 'Accept-Language: en;q=0.9' \
+          -H 'Cache-Control: no-cache' \
+          -H 'Connection: keep-alive' \
+          -H 'Cookie: SISTEMAS-47873-SG_PGP_API_8080_TCP=FFABBAKMJABP; SISTEMAS-47873-SG_ORDEMCRONOLOGICA_8080_TCP=EGACBAKMJABP' \
+          -H 'DNT: 1' \
+          -H 'Pragma: no-cache' \
+          -H 'Sec-Fetch-Dest: document' \
+          -H 'Sec-Fetch-Mode: navigate' \
+          -H 'Sec-Fetch-Site: none' \
+          -H 'Sec-Fetch-User: ?1' \
+          -H 'Sec-GPC: 1' \
+          -H 'Upgrade-Insecure-Requests: 1' \
+          -H 'User-Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/128.0.0.0 Safari/537.36' \
+          -H 'sec-ch-ua: "Chromium";v="128", "Not;A=Brand";v="24", "Brave";v="128"' \
+          -H 'sec-ch-ua-mobile: ?0' \
+          -H 'sec-ch-ua-platform: "macOS"' | jq > "json/$F/$GITHUB_RUN_ID.json"
 
       - name: Commit CD1
         uses: EndBug/add-and-commit@v9
