--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,22 +20,22 @@ jobs:
           T='ordem=1&max=10&offset=0'
           F='SF1'
           curl -s "https://$H/$P?$T" \
-          -H 'accept: text/html,application/xhtml+xml,application/xml;q=0.9,image/avif,image/webp,image/apng,*/*;q=0.8' \
-          -H 'accept-language: en;q=0.6' \
-          -H 'cache-control: no-cache' \
-          -H 'dnt: 1' \
-          -H 'pragma: no-cache' \
-          -H 'priority: u=0, i' \
-          -H 'sec-ch-ua: "Not A(Brand";v="8", "Chromium";v="132", "Brave";v="132"' \
-          -H 'sec-ch-ua-mobile: ?0' \
-          -H 'sec-ch-ua-platform: "Windows"' \
-          -H 'sec-fetch-dest: document' \
-          -H 'sec-fetch-mode: navigate' \
-          -H 'sec-fetch-site: none' \
-          -H 'sec-fetch-user: ?1' \
-          -H 'sec-gpc: 1' \
-          -H 'upgrade-insecure-requests: 1' \
-          -H "user-agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/$((100 + $RANDOM % 32)).0.0.0 Safari/$((500 + $RANDOM % 37)).36" \
+          # -H 'accept: text/html,application/xhtml+xml,application/xml;q=0.9,image/avif,image/webp,image/apng,*/*;q=0.8' \
+          # -H 'accept-language: en;q=0.6' \
+          # -H 'cache-control: no-cache' \
+          # -H 'dnt: 1' \
+          # -H 'pragma: no-cache' \
+          # -H 'priority: u=0, i' \
+          # -H 'sec-ch-ua: "Not A(Brand";v="8", "Chromium";v="132", "Brave";v="132"' \
+          # -H 'sec-ch-ua-mobile: ?0' \
+          # -H 'sec-ch-ua-platform: "Windows"' \
+          # -H 'sec-fetch-dest: document' \
+          # -H 'sec-fetch-mode: navigate' \
+          # -H 'sec-fetch-site: none' \
+          # -H 'sec-fetch-user: ?1' \
+          # -H 'sec-gpc: 1' \
+          # -H 'upgrade-insecure-requests: 1' \
+          # -H "user-agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/$((100 + $RANDOM % 32)).0.0.0 Safari/$((500 + $RANDOM % 37)).36" \
           --output "$F.json"
           jq . "$F.json" > "json/$F/$GITHUB_RUN_ID.json" || echo "curl -s https://$H/$P?$T | jq" > "json/$F/$GITHUB_RUN_ID.json"
           cat "$F.json"
@@ -55,22 +55,22 @@ jobs:
           T='ordem=1&max=10&offset=0'
           F='CD1'
           curl -s "https://$H/$P?$T" \
-          -H 'accept: text/html,application/xhtml+xml,application/xml;q=0.9,image/avif,image/webp,image/apng,*/*;q=0.8' \
-          -H 'accept-language: en;q=0.6' \
-          -H 'cache-control: no-cache' \
-          -H 'dnt: 1' \
-          -H 'pragma: no-cache' \
-          -H 'priority: u=0, i' \
-          -H 'sec-ch-ua: "Not A(Brand";v="8", "Chromium";v="132", "Brave";v="132"' \
-          -H 'sec-ch-ua-mobile: ?0' \
-          -H 'sec-ch-ua-platform: "Windows"' \
-          -H 'sec-fetch-dest: document' \
-          -H 'sec-fetch-mode: navigate' \
-          -H 'sec-fetch-site: none' \
-          -H 'sec-fetch-user: ?1' \
-          -H 'sec-gpc: 1' \
-          -H 'upgrade-insecure-requests: 1' \
-          -H "user-agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/$((100 + $RANDOM % 32)).0.0.0 Safari/$((500 + $RANDOM % 37)).36" \
+          # -H 'accept: text/html,application/xhtml+xml,application/xml;q=0.9,image/avif,image/webp,image/apng,*/*;q=0.8' \
+          # -H 'accept-language: en;q=0.6' \
+          # -H 'cache-control: no-cache' \
+          # -H 'dnt: 1' \
+          # -H 'pragma: no-cache' \
+          # -H 'priority: u=0, i' \
+          # -H 'sec-ch-ua: "Not A(Brand";v="8", "Chromium";v="132", "Brave";v="132"' \
+          # -H 'sec-ch-ua-mobile: ?0' \
+          # -H 'sec-ch-ua-platform: "Windows"' \
+          # -H 'sec-fetch-dest: document' \
+          # -H 'sec-fetch-mode: navigate' \
+          # -H 'sec-fetch-site: none' \
+          # -H 'sec-fetch-user: ?1' \
+          # -H 'sec-gpc: 1' \
+          # -H 'upgrade-insecure-requests: 1' \
+          # -H "user-agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/$((100 + $RANDOM % 32)).0.0.0 Safari/$((500 + $RANDOM % 37)).36" \
           --output "$F.json"
           jq . "$F.json" > "json/$F/$GITHUB_RUN_ID.json" || echo "curl -s https://$H/$P?$T | jq" > "json/$F/$GITHUB_RUN_ID.json"
           cat "$F.json"
